# uav-co-computer

./: .gitignore  .gitmodules  Pixhawk2RPi_Mavros.docx  README.md  node_sysIDtest.cpp  rxtx.hpp
src/mav_offb_control/: CMakeLists.txt  package.xml
src/mav_offb_control/launch/: offb.launch
src/mav_offb_control/logs/: .gitignore
src/mav_offb_control/src/: mavros_fly_mission_node.cpp  offb_node.cpp  testread.cpp  testwrite.cpp
