<?xml version="1.0"?>
<package format="2">
  <name>mav_offb_control</name>
  <version>0.1.0</version>
  <description>The mav_offb_control package</description>

  <maintainer email="jwade109@vt.edu">Wade Foster</maintainer>

  <license>TODO</license>
  <url type="website">https://github.com/jwade109/uav-co-computer</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
